# EchoMind

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
backend/: .env.example  README.md  build.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260716_0001_core_data_model.py  20260717_0002_import_persistence_fields.py  20260718_0003_extraction_provenance.py  20260719_0004_confidence_scoring.py  20260720_0005_insight_review_history.py  20260721_0006_profile_snapshots.py
backend/src/echomind/: __init__.py  main.py
backend/tests/: __init__.py  conftest.py  db_helpers.py  test_constraints.py  test_deletion_constraints.py  test_health.py  test_migrations.py  test_models.py  test_schemas.py  test_timezone.py
backend/tests/api/: test_import_workflow.py
backend/tests/audit/: test_analysis_api.py  test_profile_traceability.py  test_release_metadata.py  test_transaction_recovery.py
backend/tests/cleaning/: __init__.py  factories.py  test_analysis_units.py  test_attachments.py  test_classification.py  test_duplicates.py  test_exclusion.py  test_options.py  test_pipeline.py  test_privacy.py  test_redaction.py  test_statistics.py  test_urls.py  test_whitespace.py
backend/tests/confidence/: __init__.py  factories.py  test_factors.py  test_formula_and_fingerprints.py  test_request.py  test_service_and_persistence.py
backend/tests/extraction/: __init__.py  factories.py  test_candidate_validation.py  test_context_evidence_and_boundaries.py  test_schemas_and_windows.py  (+1 more)
(+245 files in other folders)
