[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "echomind"
version = "0.1.0"
description = "Local-first, evidence-first personal understanding toolkit"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.5,<2",
    "fastapi>=0.139.2,<0.140",
    "fastapi-cli>=0.0.32,<0.1",
    "pydantic-settings>=2.14.2,<3",
    "sqlalchemy>=2.0.51,<2.1",
    "uvicorn>=0.51,<0.52",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<0.29",
    "mypy>=2.3,<3",
    "pytest>=9.1.1,<10",
    "ruff>=0.15.21,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["src/echomind"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
